--- a/breathing/index.html
+++ b/breathing/index.html
@@ -44,6 +44,17 @@
   .img15 { background-image: url("15.jpg"); }
   .img16 { background-image: url("16.jpg"); }
   .img17 { background-image: url("17.jpg"); }
+  .img18 { background-image: url("18.jpg"); }
+  .img19 { background-image: url("19.jpg"); }
+  .img20 { background-image: url("20.jpg"); }
+  .img21 { background-image: url("21.jpg"); }
+  .img22 { background-image: url("22.jpg"); }
+  .img23 { background-image: url("23.jpg"); }
+  .img24 { background-image: url("24.jpg"); }
+  .img25 { background-image: url("25.jpg"); }
+  .img26 { background-image: url("26.jpg"); }
+  .img27 { background-image: url("27.jpg"); }
+
 
   /* Position text in the middle of the page/image */
   .bg-text {
@@ -83,6 +94,16 @@
   <div class="bg-image img15"></div>
   <div class="bg-image img16"></div>
   <div class="bg-image img17"></div>
+  <div class="bg-image img18"></div>
+  <div class="bg-image img19"></div>
+  <div class="bg-image img20"></div>
+  <div class="bg-image img21"></div>
+  <div class="bg-image img22"></div>
+  <div class="bg-image img23"></div>
+  <div class="bg-image img24"></div>
+  <div class="bg-image img25"></div>
+  <div class="bg-image img26"></div>
+  <div class="bg-image img27"></div>
 
   <div class="bg-text">  <p>when was the last time you went outside and felt nature...... </p>
   <p>when was the last time that you actually treated yourself with love......</p></div>
