--- a/typing/after/index.html
+++ b/typing/after/index.html
@@ -6,25 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <!-- <input type="text" id="myText" value="...">  -->
-<textarea id="myText" name="textfield" rows="7" cols="40"></textarea>
-  <br>
-<button type="button" onclick="postText()">
-  Submit
-</button>
-
-<!-- this is where text will appear -->
-<p id="text-display"></p>
-
-<div class="box1">
-<a href="thoughts behind/index.html"><img src="arrow.png" alt="Arrow for the next page" style="width:30%"></a>
-</div>
-
-<script src="jquery.marquee.min.js"></script>
-
+<div class="shredded-paper">
+      <div class="content">
+          <div class="alert">
+              CONFIDENTIAL
+          </div>
+      </div>
+      <div class="shred-me">
+          -SHRED-
+      </div>
+  </div>
+  <script src="function.js"></script>
 </body>
 
 </html>
