--- a/breathing/index.html
+++ b/breathing/index.html
@@ -26,6 +26,15 @@
     background-size: cover;
   }
 
+  #myVideo {
+  position: center;
+  right: 0;
+  bottom: 0;
+  margin-left: auto;
+  width: 100%;
+  height: 100%;
+}
+
   /* Images used */
   .img1 { background-image: url("1.jpg"); }
   .img2 { background-image: url("2.jpg"); }
@@ -54,11 +63,14 @@
   .img25 { background-image: url("25.jpg"); }
   .img26 { background-image: url("26.jpg"); }
   .img27 { background-image: url("27.jpg"); }
+  .img27 { background-image: url("27.jpg"); }
 
   </style>
   </head>
   <body>
-
+    <video autoplay muted loop id="myVideo">
+    <source src="breath.mp4" type="video/mp4">
+  </video>
   <div class="bg-image img1"></div>
   <div class="bg-image img2"></div>
   <div class="bg-image img3"></div>
@@ -86,21 +98,21 @@
   <div class="bg-image img25"></div>
   <div class="bg-image img26"></div>
   <div class="bg-image img27"></div>
+  <video autoplay muted loop id="myVideo">
+  <source src="words.mp4" type="video/mp4">
+</video>
 
-  <div class="bg-text">  <p>when was the last time you went outside and felt nature...... </p>
-  <p>when was the last time that you actually treated yourself with love......</p></div>
+  <!-- <div class="sticky"> -->
+<div class="flexbox">
+    <div class="bg-text">  <p>when was the last time you went outside and felt nature...... </p>
+        <p>when was the last time that you actually treated yourself with love......</p>
+      <p>more in the below......</p></div>
+      </div>
+<div class="box">
+  <img src="arrow1.png" alt="arrow">
+</div>
+</div>
 
-
-<!-- <body>
-
-  <div class="bg-image img1"></div>
-  <div class="bg-image img2"></div>
-  <div class="bg-image img3"></div>
-
-  <div class="bg-text">
-    <p>when was the last time you went outside and felt nature...... </p>
-  <p>when was the last time that you actually treated yourself with love......</p>
-  </div> -->
 
 </body>
 
