--- a/breathing/index.html
+++ b/breathing/index.html
@@ -108,9 +108,9 @@
         <p>when was the last time that you actually treated yourself with love......</p>
       <p>more in the below......</p></div>
       </div>
-<div class="box">
+<!-- <div class="box">
   <img src="arrow1.png" alt="arrow">
-</div>
+</div> -->
 </div>
 
 
