--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Use a button to pause/play the video with JavaScript -->
 <a href="breathing/index.html"><button id="myBtn" onclick="myFunction()">breathing</button></a>
 <a href="selfchecking/index.html"><button id="myBtn" onclick="myFunction()">checking</button></a>
-<a herf="typing/index.html"><button id="myBtn" onclick="myFunction()">typing</button></a>
+<a href="typing/index.html"><button id="myBtn" onclick="myFunction()">typing</button></a>
 </div>
 
 
