--- a/selfchecking/index.html
+++ b/selfchecking/index.html
@@ -20,23 +20,87 @@
   <video autoplay muted loop id="myVideo">
   <source src="eye.mp4" type="video/mp4">
 </video> -->
+<!-- <div class="content">
+  <h>name one thing that you never give up on......
+</h>
+</div> -->
 
 <div class="right-eye">
+  <div class="content">
+    <h>one thing that you never give up on......
+  </h>
+  </div>
   <div class="shut">
     <span>
-      <div class="box"><h>name one thing that you never give up on......
-    </h></div></span>
+      </span>
   </div>
   <div class="ball">
 </div>
 </div>
 
 <div class="left-eye">
+  <div class="content">
+    <h>yourself
+  </h>
+  </div>
   <div class="shut">
     <span></span>
   </div>
   <div class="ball">
 </div>
+</div>
+
+<div class='canvas'>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
+  <div class='bubble'></div>
 </div>
 
 </body>
