--- a/breathing/index.html
+++ b/breathing/index.html
@@ -69,7 +69,7 @@
   </head>
   <body>
     <video autoplay muted loop id="myVideo">
-    <source src="breath.mp4" type="video/mp4">
+    <source src="breath2.mp4" type="video/mp4">
   </video>
   <div class="bg-image img1"></div>
   <div class="bg-image img2"></div>
