--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Optional: some overlay text to describe the video -->
 <div class="content">
-<h1>Welcome To Personal Space......</h1>
+<h1>Welcome To Your Personal Space......</h1>
 <!-- Use a button to pause/play the video with JavaScript -->
 <a href="breathing/index.html"><button id="myBtn" onclick="myFunction()">breathing</button></a>
 <a href="selfchecking/index.html"><button id="myBtn" onclick="myFunction()">checking</button></a>
