--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- The video -->
 <video autoplay muted loop id="myVideo">
-<source src="https://vimeo.com/elvahuang" type="video/mp4">
+<source src="theme.mp4" type="video/mp4">
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
