--- a/breathing/index.html
+++ b/breathing/index.html
@@ -67,7 +67,9 @@
 
   </style>
   </head>
+
   <body>
+
     <video autoplay muted loop id="myVideo">
     <source src="breath2.mp4" type="video/mp4">
   </video>
@@ -106,7 +108,13 @@
 <div class="flexbox">
     <div class="bg-text">  <p>when was the last time you went outside and felt nature...... </p>
         <p>when was the last time that you actually treated yourself with love......</p>
-      <p>more in the below......</p></div>
+      <p>more in the below......</p>
+    <p>or go back
+    <a href="../index.html">
+      <img class="back" src="arrow1.png">
+    </a>
+    </p>
+    </div>
       </div>
 <!-- <div class="box">
   <img src="arrow1.png" alt="arrow">
