--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
   <!-- The video -->
 <video autoplay muted loop id="myVideo">
-<source src="theme.mp4" type="video/mp4">
+<source src="theme2.mp4" type="video/mp4">
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
 <div class="content">
 <h1>Welcome To Your Personal Space......</h1>
+<br>
 <!-- Use a button to pause/play the video with JavaScript -->
 <a href="breathing/index.html"><button id="myBtn" onclick="myFunction()">breathing</button></a>
-<a href="selfchecking/index.html"><button id="myBtn" onclick="myFunction()">checking</button></a>
+<a href="selfchecking/index.html"><button id="myBtn" onclick="myFunction()">watching</button></a>
 <a href="typing/index.html"><button id="myBtn" onclick="myFunction()">typing</button></a>
 </div>
 
