--- a/selfchecking/index.html
+++ b/selfchecking/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-  <title>Watch</title>
+  <title>Watching</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -24,7 +24,11 @@
   <h>name one thing that you never give up on......
 </h>
 </div> -->
-
+<a href="../index.html">
+  <img class="back" src="arrow1.png"
+  style="width:50px;height:40px;">
+</a>
+</p>
 <div class="right-eye">
   <div class="content">
     <h>one thing that you never give up on......
