--- a/typing/after/index.html
+++ b/typing/after/index.html
@@ -22,6 +22,10 @@
           -SHRED-
       </div>
   </div>
+  <a href="thoughts behind/index.html">
+    <img class="back" src="arrow.png"
+    style="width:50px;height:40px;">
+  </a>
   <script src="function.js"></script>
 </body>
 
