--- a/typing/after/thoughts behind/index.html
+++ b/typing/after/thoughts behind/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <a href="../../index.html">
+    <img class="back" src="arrow.png"
+    style="width:50px;height:40px;">
+  </a>
 <div class="container">
   <div class="felx-box">
       <h>
