--- a/typing/index.html
+++ b/typing/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <a href="../index.html">
+    <img class="back" src="arrow2.png"
+    style="width:50px;height:40px;">
+  </a>
 
   <div class="felx-content1">
     <div class="content">
@@ -17,7 +21,7 @@
         <p1>
         type down what's in your mind right now...
       </p1>
-      
+
       </div>
 
       <div class="box">
