--- a/typing/after/index.html
+++ b/typing/after/index.html
@@ -26,7 +26,7 @@
     <img class="back" src="arrow.png"
     style="width:50px;height:40px;">
   </a>
-  <script src="function.js"></script>
+  <script src="jquery.marquee.min.js"></script>
 </body>
 
 </html>
